terraform-code/dev/account-3666/us-east4/geotrade-app/gke/central/kafka-helm/kafka/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kafka-ingress
#   namespace: kafka
#   annotations:
#     kubernetes.io/ingress.class: nginx-internal
# spec:
#   defaultBackend:
#     service:
#       name: geotrade-kafka
#       port:
#         number: 9092


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kafka.34.150.233.24.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: geotrade-kafka
              servicePort: 9092
